---------------------------------------------------------------------------------------------------
Version: 0.7.1
Date: 2025-10-29
  Bug Fixes:
    - Added missing nil and '.valid' checks to the character-corpse entity when the player dies while in satellite mode
      - Only encountered this error once while testing another mod, and have not been able to reproduce since
      - The newly added checks should prevent it from occurring again though
---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 2025-10-28
  Minor Features:
    - Replaced space-age hard requirement with a hidden optional requirement, and an optional requirement for quality
      - Should be compatible now with "Vanilla", i.e. no other mods than this and "base"
    - Now when the "How long will a satellite remain in orbit" setting is set to 0, satellite expiration is disabled
      - i.e. While this setting is 0, satellites will never expire
    - Added default 30 tick or 0.5 seconds delay from a satellite being loaded into a rocket-silo, and the launch being initiated
      - Only applies when the "Automatically launch rockets with satellites" setting is checked
      - This is to allow the default automatic launching of satellites in Vanilla to function when the "Send to orbit automatically" checkbox is checked
        - i.e. launch, but also return space-science packs
      - Added configurable runtime setting for controlling the above delay
    - Vanilla:
      - Added "Track satellites launched for research" runtime setting
        - Whether to track and count satellites launched via the normal means for space-science-packs as being in "orbit"
          - i.e. if manually triggered by a player, or the "Send to orbit automatically" checkbox was checked and triggered the launch
          - Defaults to true
          - Set to false if you only want to consider satellites not launched for science-packs as being in "orbit"