@@ -1,6 +1,4 @@
 [mod-setting-name]
-all-seeing-satellite-nth-tick=Tick cycle time
-
 all-seeing-satellite-require-satellites-in-orbit=Require satellites in orbit to toggle the FoW
 all-seeing-satellite-restrict-satellite-scanning=Require satellites in orbit for scanning
 all-seeing-satellite-restrict-satellite-mode=Require satellites in orbit for Satellite Mode
@@ -21,8 +19,12 @@ all-seeing-satellite-satellite-scan-mode=Satellite scan mode
 
 all-seeing-satellite-satellite-base-quality-factor=Satellite base quality factor
 
+all-seeing-satellite-nth-tick=Tick cycle time
+
+all-seeing-satellite-satellite-mode-view-distance=Satellite mode view distance
+all-seeing-satellite-satellite-mode-max-view-distance=Satellite mode max view distance
+
 [mod-setting-description]
-all-seeing-satellite-nth-tick=Default of 10\n\ni.e. will try to complete processing every 10 ticks before starting a new cycle\n\nSetting to 1 will cause it to try to process every tick.
 all-seeing-satellite-default-satellite-time-to-live=Time in minutes that a given satellite will last in orbit. Default of 20 minutes
 
 all-seeing-satellite-global-launch-satellite-threshold=Number of satellites required in orbit to toggle FoW or Satellite Mode. 0 to 100, default of 3 for planet with a magnitude of 1 (e.g Nauvis)
@@ -37,3 +39,8 @@ all-seeing-satellite-do-launch-rockets=Whether to automatically try and launch a
 all-seeing-satellite-track-satellites-launched-for-research=If a rocket-silo launches a satellite, and has the "Send to orbit automatically" checkbox checked, whether to track that satellite and include it in "orbit".
 
 all-seeing-satellite-rocket-launch-delay=Delay, in ticks (60 per second), between a satellite being loaded into a rocket-silo, and it subsequently being launched.\n\nThis is to give priority to rocket-silos set to automatically launch any cargo with launch products ("Send to orbit automatically" checkbox is checked).\n\nFrom testing, values less than 15 may preempt the default "Send to orbit automatically" mode behavior.
+
+all-seeing-satellite-nth-tick=Default of 10\n\ni.e. will try to complete processing every 10 ticks before starting a new cycle\n\nSetting to 1 will cause it to try to process every tick.
+
+all-seeing-satellite-satellite-mode-view-distance=From the Factorio mod api:\n\nThe number of game tiles across the horizontal axis at the game's default 16:9 aspect ratio.\n\nhttps://lua-api.factorio.com/stable/concepts/ZoomSpecification.html
+all-seeing-satellite-satellite-mode-max-view-distance=From the Factorio mod api:\n\nThe absolute maximum number of game tiles permitted along the window's longest axis...\n\nhttps://lua-api.factorio.com/stable/concepts/ZoomSpecification.html
